fix ul text-aligne

--- a/sass/about.scss
+++ b/sass/about.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   background-color: $bg-decor-light-grey;
   min-height: 840px;
   list-style: none;
